# csv2postgresql

./: .gitignore  .pre-commit-config.yaml  README.md  csv2postgresql.py  pyproject.toml
